@startuml ListCommandClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml

interface Command {
    +execute(StudentDatabase, Storage): CommandResult
    +undo(StudentDatabase, Storage): CommandResult
    +isUndoable(): boolean
}

class ListCommand {
    +execute(StudentDatabase, Storage): CommandResult
    +undo(StudentDatabase, Storage): CommandResult
    +isUndoable(): boolean
}

class StudentDatabase {
    +getAllStudents(): List<Student>
}

class Student {
    +toString(): String
}

class CommandResult {
    -message: String
    -exit: boolean
    +getMessage(): String
    +shouldExit(): boolean
}

Command <|.. ListCommand
ListCommand ..> StudentDatabase : uses
ListCommand ..> CommandResult : creates
StudentDatabase "1" o-- "*" Student : contains
@enduml
